v1.4.0 updates -UI  & functionality Enhancements
Manual Scan History
Sidebar Navigation
App Updates
Theme and Accent settings
Profile Settings
App header
Accessibility Dashboard Updates
